cmake_minimum_required(VERSION 3.23)
project(Familiarization)

set(CMAKE_CXX_STANDARD 20)

add_executable(Familiarization main.cpp someNewFile.cpp cmake-build-debug/personal-library.h cmake-build-debug/structure.h cmake-build-debug/calculator.h cmake-build-debug/test.h cmake-build-debug/name-sorter.h cmake-build-debug/name-is-exist.h cmake-build-debug/hero-has.h cmake-build-debug/teacher-student-system.h cmake-build-debug/blackjack.h)
